--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@prisma/client": "2.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,16 +12,23 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
+    "ahooks": "^2.5.0",
+    "axios": "^0.19.2",
     "formik": "^2.1.5",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
+    "recoil": "^0.0.10",
+    "recoil-persist": "^0.6.0",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3",
     "yup": "^0.29.1"
@@ -47,19 +55,30 @@
     ]
   },
   "devDependencies": {
-    "@prisma/cli": "^2.3.0",
+    "@prisma/cli": "^2.4.1",
+    "@types/argon2": "^0.15.0",
+    "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recoil": "^0.0.1",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "@vercel/node": "^1.7.3",
+    "argon2": "^0.26.2",
+    "bcrypt": "^5.0.0",
     "customize-cra": "^1.0.0",
     "customize-cra-react-refresh": "^1.1.0",
     "eslint": "6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.2.11",
+    "micro-redirect": "^1.0.2",
     "prettier": "2.0.5",
     "react-app-rewired": "^2.1.6",
     "typescript": "3.9.3"
