--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudflare/stream-react": "^0.1.5",
     "@prisma/client": "2.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,11 +19,13 @@
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
+    "luxon": "^1.25.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.1.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-i18next": "^11.7.0",
@@ -35,6 +38,7 @@
     "recoil-persist": "^0.6.0",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3",
+    "tus-js-client": "^2.2.0",
     "yup": "^0.29.1"
   },
   "scripts": {
@@ -60,13 +64,15 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.11.0",
-    "@prisma/cli": "^2.4.1",
+    "@prisma/cli": "^2.11.0",
     "@types/argon2": "^0.15.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/luxon": "^1.25.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/react-circular-progressbar": "^1.1.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-textarea-autosize": "^4.3.5",
     "@types/recoil": "^0.0.1",
