--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@cloudflare/stream-react": "^0.1.5",
-    "@prisma/client": "2.3.0",
+    "@prisma/client": "^2.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,10 +15,13 @@
     "@types/styled-components": "^5.1.1",
     "ahooks": "^2.5.0",
     "axios": "^0.19.2",
+    "cloudinary": "^1.23.0",
+    "cloudinary-react": "^1.6.8",
     "formik": "^2.1.5",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
+    "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -32,6 +35,7 @@
     "react-phone-input-2": "^2.13.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-spinners": "^0.9.0",
     "react-textarea-autosize": "^8.2.0",
     "recoil": "^0.0.10",
@@ -39,7 +43,7 @@
     "styled-components": "^5.1.1",
     "swr": "^0.2.3",
     "tus-js-client": "^2.2.0",
-    "yup": "^0.29.1"
+    "yup": "0.27.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -69,11 +73,13 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.25.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/react-circular-progressbar": "^1.1.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.26",
     "@types/react-textarea-autosize": "^4.3.5",
     "@types/recoil": "^0.0.1",
     "@types/yup": "^0.29.3",
