Profile view, GET-12 show videolesson preview

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
   },
   "plugins": [
     "@typescript-eslint",
-    "react"
+    "react",
+    "react-hooks"
   ],
   "parserOptions": {
     "ecmaFeatures": {
