--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.1.0",
     "react-circular-progressbar": "^2.0.3",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-i18next": "^11.7.0",
@@ -78,6 +79,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/react-circular-progressbar": "^1.1.0",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.26",
     "@types/react-textarea-autosize": "^4.3.5",
@@ -94,7 +96,8 @@
     "eslint": "6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.2.11",
     "micro-redirect": "^1.0.2",
