--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
+    "@videojs/themes": "^1.0.1",
     "ahooks": "^2.5.0",
     "axios": "^0.19.2",
     "cloudinary": "^1.23.0",
+    "cloudinary-core": "^2.11.3",
     "cloudinary-react": "^1.6.8",
+    "cloudinary-video-player": "^1.5.1",
     "formik": "^2.1.5",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
@@ -33,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-i18next": "^11.7.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-phone-input-2": "^2.13.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -44,6 +48,9 @@
     "styled-components": "^5.1.1",
     "swr": "^0.2.3",
     "tus-js-client": "^2.2.0",
+    "video.js": "^7.10.2",
+    "videojs-contrib-quality-levels": "^2.0.9",
+    "videojs-hls-quality-selector": "^1.1.4",
     "yup": "0.27.0"
   },
   "scripts": {
@@ -84,6 +91,7 @@
     "@types/react-select": "^3.0.26",
     "@types/react-textarea-autosize": "^4.3.5",
     "@types/recoil": "^0.0.1",
+    "@types/video.js": "^7.3.11",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
