--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,46 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "files.exclude": {
+    ".git/": true,
+    "node_modules/": false,
+    "public/": false
+  },
+  "search.exclude": {
+    "**/.cache": true,
+    "**/node_modules": true,
+  },
+  "prettier.printWidth": 110,
+  "prettier.jsxBracketSameLine": true,
+  "prettier.semi": false,
+  "prettier.trailingComma": "es5",
+  "prettier.singleQuote": true,
+  "prettier.bracketSpacing": true,
+  "editor.rulers": [
+    110
+  ],
+  "editor.tabSize": 2,
+  "editor.formatOnSave": true,
+  "eslint.enable": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "tslint.enable": false,
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "[javascript]": {
+    "editor.formatOnSave": false,
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": false,
+  },
+  "[typescript]": {
+    "editor.formatOnSave": false,
+  },
+  "[typescriptreact]": {
+    "editor.formatOnSave": false,
+  },
 }
