--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^11.2.0",
     "react-i18next": "^11.7.0",
     "react-loading-skeleton": "^2.1.1",
+    "react-mentions": "^4.0.2",
     "react-phone-input-2": "^2.13.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -87,6 +88,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/react-circular-progressbar": "^1.1.0",
     "@types/react-content-loader": "^4.0.0",
+    "@types/react-mentions": "^3.3.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.26",
     "@types/react-textarea-autosize": "^4.3.5",
