--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ SMSC_PASSWORD=
 MAILGUN_DOMAIN=
 MAILGUN_API_KEY=
 
+YC_ACCESS_KEY=
+YC_SECRET_KEY=
+YC_S3_ENDPOINT=https://storage.yandexcloud.net
+YC_S3_STORAGE_BUCKET=
+YC_REGION=ru-central1
+
 REACT_APP_CLOUDINARY_CLOUD_NAME=get-skill-ru
 
 VIDEOLESSON_MAX_DURATION=600
+VERIFICATION_MAX_ATTEMPTS=3
+VERIFICATION_TIMES=2
