--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cloudflare/stream-react": "^0.1.5",
-    "@prisma/client": "^2.13.1",
+    "@cloudflare/stream-react": "^0.2.0",
+    "@prisma/client": "^2.17.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.1",
     "@videojs/themes": "^1.0.1",
     "ahooks": "^2.5.0",
+    "aws-sdk": "^2.834.0",
     "axios": "^0.19.2",
     "cloudinary": "^1.23.0",
     "cloudinary-core": "^2.11.3",
@@ -26,6 +27,7 @@
     "i18next-http-backend": "^1.0.17",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
+    "mime-types": "^2.1.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "polished": "^3.6.5",
@@ -77,13 +79,15 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.11.0",
-    "@prisma/cli": "^2.13.1",
+    "@prisma/cli": "^2.15.0",
     "@types/argon2": "^0.15.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.25.0",
+    "@types/mime-types": "^2.1.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/react-circular-progressbar": "^1.1.0",
@@ -112,6 +116,7 @@
     "lint-staged": "^10.2.11",
     "micro-redirect": "^1.0.2",
     "prettier": "2.0.5",
+    "prisma": "^2.17.0",
     "react-app-rewired": "^2.1.6",
     "typescript": "3.9.3"
   }
