--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@cloudflare/stream-react": "^0.2.0",
+    "@popperjs/core": "^2.9.1",
     "@prisma/client": "^2.17.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -41,11 +42,13 @@
     "react-loading-skeleton": "^2.1.1",
     "react-mentions": "^4.0.2",
     "react-phone-input-2": "^2.13.8",
+    "react-popper": "^2.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-spinners": "^0.9.0",
     "react-textarea-autosize": "^8.2.0",
+    "react-transition-group": "^4.4.1",
     "recoil": "^0.0.10",
     "recoil-persist": "^0.6.0",
     "styled-components": "^5.1.1",
